--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=14AEEB6D4A98F0ED5194C9AD6DFF2BEB
-ProjectName=Third Person BP Game Template
-ProjectVersion=1.0.0.1
+ProjectName=Gravity Royale
+ProjectVersion=1.0.0.2
+Homepage="https://arifz.itch.io/"
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
 
