--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,9 +1,91 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=14AEEB6D4A98F0ED5194C9AD6DFF2BEB
 ProjectName=Gravity Royale
-ProjectVersion=1.0.0.2
+ProjectVersion=1.1.0.0
 Homepage="https://arifz.itch.io/"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Development
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="D:/Games/UE4 Games/GravityRoyale")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=True
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+GenerateEarlyDownloaderPakFile=False
+bSkipEditorContent=False
+bSkipMovies=False
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.nrm
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.cfu
+-EarlyDownloaderPakFileFiles=...\Content\Localization\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Localization\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\...\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\*.*
+-EarlyDownloaderPakFileFiles=...\Config\...\*.ini
+-EarlyDownloaderPakFileFiles=...\Config\*.ini
+-EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
+-EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
+-EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
+-EarlyDownloaderPakFileFiles=...\*.upluginmanifest
+-EarlyDownloaderPakFileFiles=...\*.uproject
+-EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.nrm
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.cfu
++EarlyDownloaderPakFileFiles=...\Content\Localization\...\*.*
++EarlyDownloaderPakFileFiles=...\Content\Localization\*.*
++EarlyDownloaderPakFileFiles=...\Content\Certificates\...\*.*
++EarlyDownloaderPakFileFiles=...\Content\Certificates\*.*
++EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\...\*.*
++EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\*.*
++EarlyDownloaderPakFileFiles=...\Config\...\*.ini
++EarlyDownloaderPakFileFiles=...\Config\*.ini
++EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
++EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
++EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
++EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
++EarlyDownloaderPakFileFiles=...\*.upluginmanifest
++EarlyDownloaderPakFileFiles=...\*.uproject
++EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
++MapsToCook=(FilePath="/Game/Map/OutdoorLevel")
++MapsToCook=(FilePath="/Game/Map/IndoorLevel")
++MapsToCook=(FilePath="/Game/Map/LobbyLevel")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
 
