--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=CustomGravity
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/TestLevel.TestLevel
+EditorStartupMap=/Game/Map/OutdoorLevel.OutdoorLevel
 GameDefaultMap=/Game/Map/LobbyLevel.LobbyLevel
 TransitionMap=
 bUseSplitscreen=True
@@ -84,6 +84,23 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=Default
+-TargetedRHIs=PCD3D_SM5
+-TargetedRHIs=PCD3D_SM4
++TargetedRHIs=PCD3D_SM5
+DefaultGraphicsRHI=DefaultGraphicsRHI_Default
+MinimumOSVersion=MSOS_Vista
+AudioDevice=
+AudioSampleRate=48000
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=1
+AudioMaxChannels=0
+AudioNumSourceWorkers=4
+SpatializationPlugin=
+ReverbPlugin=
+OcclusionPlugin=
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
