--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,7 +79,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Shot Line",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="GameMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
-+ActionMappings=(ActionName="GameMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="GameMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=BackSpace)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
