convert to cpp version

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,13 +1,12 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=14AEEB6D4A98F0ED5194C9AD6DFF2BEB
+ProjectID=F3AEE9E845A5ADB65A039AAC26DE9915
 ProjectName=Gravity Royale
-ProjectVersion=1.1.0.0
-Homepage="https://arifz.itch.io/"
+ProjectVersion=1.2.0.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="D:/Games/UE4 Games/GravityRoyale")
+StagingDirectory=(Path="")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -27,8 +26,8 @@ PakFileAdditionalCompressionOptions=
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=True
-bSharedMaterialNativeLibraries=True
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
 InternationalizationPreset=English
@@ -56,7 +55,7 @@ bSkipMovies=False
 -EarlyDownloaderPakFileFiles=...\Config\...\*.ini
 -EarlyDownloaderPakFileFiles=...\Config\*.ini
 -EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
--EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
+-EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global*.ushaderbytecode
 -EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
 -EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
 -EarlyDownloaderPakFileFiles=...\*.upluginmanifest
@@ -76,15 +75,14 @@ bSkipMovies=False
 +EarlyDownloaderPakFileFiles=...\Config\...\*.ini
 +EarlyDownloaderPakFileFiles=...\Config\*.ini
 +EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
-+EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
++EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global*.ushaderbytecode
 +EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
 +EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
 +EarlyDownloaderPakFileFiles=...\*.upluginmanifest
 +EarlyDownloaderPakFileFiles=...\*.uproject
 +EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
-+MapsToCook=(FilePath="/Game/Map/OutdoorLevel")
 +MapsToCook=(FilePath="/Game/Map/IndoorLevel")
 +MapsToCook=(FilePath="/Game/Map/LobbyLevel")
++MapsToCook=(FilePath="/Game/Map/OutdoorLevel")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
